--- a/public/assets/css/white-dashboard.css
+++ b/public/assets/css/white-dashboard.css
@@ -14845,10 +14845,10 @@ table.tablesorter thead tr .headerSortDown {
 .sidebar,
 .off-canvas-sidebar {
   background: #2d0ccc;
-  background: -webkit-linear-gradient(0deg, #1d032c 0%, #4e65e1 100%);
-  background: -o-linear-gradient(0deg, #1d032c 0%, #4e65e1 100%);
-  background: -moz-linear-gradient(0deg, #1d032c 0%, #4e65e1 100%);
-  background: linear-gradient(0deg, #1d032c 0%, #4e65e1 100%);
+  background: -webkit-linear-gradient(0deg, #153e7e 0%, #8467d7 100%);
+  background: -o-linear-gradient(0deg, #153e7e 0%, #8467d7 100%);
+  background: -moz-linear-gradient(0deg, #153e7e 0%, #8467d7 100%);
+  background: linear-gradient(0deg, #153e7e 0%, #8467d7 100%);
   height: calc(100vh - 90px);
   width: 230px;
   position: fixed;
